--- a/sprawozdanie_1.tex
+++ b/sprawozdanie_1.tex
@@ -15,6 +15,13 @@
 \section{Wstęp}
 Celem zajęć laboratoryjnych było zaznajomienie się z podstawami pracy i administracji systemów z rodziny Linux. Przed przystąpieniem do pracy należało opanować podstawowe pojęcia związanie z kryptografią asymetryczną oraz poznać wybrane programy narzędziowe zainstalowane na komputerach laboratoryjnych.
 
+\section{Kryptografia asymetryczna}
+Jest to część kryptografii, gdzie operacja szyfrowania i odszyfrowywania informacji są od siebie istotnie różne.
+
+\section{Zarządzanie uprawnieniami administratorskimi}
+
+\section{Blokowanie zdalnego dostępu do komputera}
+
 
 \end{document}
 \maketitle{}
